Feat: Tab title added.
The tab tittle Andes Global was added for the nav.

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
 <!--
-	Aesthetic by gettemplates.co
-	Twitter: http://twitter.com/gettemplateco
-	URL: http://gettemplates.co
+	Andes Global by andesglobal.com
+	URL: http://andesglobal.com
 -->
 <html>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aesthetic &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>Andes Global &mdash; HOME</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="gettemplates.co" />
+	<meta name="description" content="Andes Global company website and blog." />
+	<meta name="keywords" content="andes global, andes company, andes leads, andes software, andes website, andes marketing, andes solutions, andes it, andes" />
+	<meta name="author" content="andesglobal.com" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -26,7 +25,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -48,16 +47,12 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
 
 	</head>
 	<body>
-		
+
 	<div class="gtco-loader"></div>
-	
+
 	<div id="page">
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
@@ -73,7 +68,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><a href="index.html">Aesthetic <em>.</em></a></div>
+					<div id="gtco-logo"><a href="index.html">Andes Global <em>.</em></a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
@@ -102,7 +97,7 @@
 					</ul>
 				</div>
 			</div>
-			
+
 		</div>
 	</nav>
 
@@ -159,7 +154,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="gtco-features">
 		<div class="gtco-container">
 			<div class="row">
@@ -221,7 +216,7 @@
 			<div class="row row-pb-md">
 				<div class="col-md-12">
 					<ul id="gtco-portfolio-list">
-						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_1.jpg); "> 
+						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_1.jpg); ">
 							<a href="#" class="color-1">
 								<div class="case-studies-summary">
 									<span>Web Design</span>
@@ -256,7 +251,7 @@
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_5.jpg); "> 
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_5.jpg); ">
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
 									<span>Web Design</span>
@@ -272,7 +267,7 @@
 								</div>
 							</a>
 						</li>
-					</ul>		
+					</ul>
 				</div>
 			</div>
 
@@ -282,7 +277,7 @@
 				</div>
 			</div>
 
-			
+
 		</div>
 	</div>
 
@@ -297,7 +292,7 @@
 			</div>
 
 			<div class="row">
-				
+
 				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 					<div class="feature-center">
 						<span class="icon">
@@ -336,7 +331,7 @@
 
 					</div>
 				</div>
-					
+
 			</div>
 		</div>
 	</div>
@@ -368,7 +363,7 @@
 		</div>
 	</div>
 
-	
+
 
 	<div id="gtco-subscribe">
 		<div class="gtco-container">
@@ -442,7 +437,7 @@
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p class="pull-right">
@@ -463,7 +458,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -484,4 +479,3 @@
 
 	</body>
 </html>
-
