--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -83,15 +83,6 @@
 								<li><a href="#">API</a></li>
 							</ul>
 						</li>
-						<li class="has-dropdown">
-							<a href="#">Dropdown</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
@@ -108,9 +99,23 @@
 				<div class="col-md-12 col-md-offset-0 text-left">
 					<div class="display-t">
 						<div class="display-tc">
+
 							<h1 class="animate-box" data-animate-effect="fadeInUp">Your Business To The Next Level</h1>
+
 							<h2 class="animate-box" data-animate-effect="fadeInUp">Free HTML5 Bootstrap Templates Made <em>by</em> <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a></h2>
+
 							<p class="animate-box" data-animate-effect="fadeInUp"><a href="#" class="btn btn-white btn-lg btn-outline">Get In Touch</a></p>
+							<div class="col-md-12 text-center">
+								<a href="#" onclick="return goDown();" style="opacity: 1;">
+									<div class="animate-box" data-animate-effect="fadeInUp">
+										EXPLORE
+									</div>
+									<div class="animate-box" data-animate-effect="fadeInUp">
+										<img src="/images/down.png">
+									</div>
+								</a>
+							</div>
+
 						</div>
 					</div>
 				</div>
