--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -93,13 +93,14 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .gtco-nav {
-  position: absolute;
+  position: fixed;
   top: 0;
   margin: 0;
   padding: 0;
   width: 100%;
   padding: 20px 0;
   z-index: 1001;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, transparent 84%, transparent 100%);
 }
 @media screen and (max-width: 768px) {
   .gtco-nav {
@@ -1887,6 +1888,11 @@ form label {
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
   background: none;
   border: 2px solid #17B794;
+}
+
+.sticky {
+  background: #14171c;
+  transition: 2.5s;
 }
 
 /*# sourceMappingURL=style.css.map */
