feat: new portfolio section

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -67,7 +67,7 @@
 						<li><a href="#gtco-features">Servicios</a></li>
 						<li><a href="#gtco-portfolio">Portfolio</a></li>
 						<li><a href="#gtco-footer">Contacto</a></li>
-						<li><a href="blog">Blog</a></li>
+						<li><a href="blog" target="_blank" rel="noopener noreferrer">Blog</a></li>
 					</ul>
 				</div>
 			</div>
@@ -117,31 +117,31 @@
 				<div class="feature feature-1 animate-box" data-animate-effect="fadeInUp">
 					<div class="feature-inner">
 						<span class="icon">
-							<i class="ti-search"></i>
+							<i class="ti-mobile"></i>
 						</span>
-						<h3>Search</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. </p>
-						<p><a href="#" class="btn btn-white btn-outline">Learn More</a></p>
+						<h3>DESARROLLO DE APPS MÓVILES</h3>
+						<p>Aplicaciones creativas y a medida, para disfrutar de todos los recursos disponibles en un smartphones. </p>
+						<p><a href="#gtco-footer" class="btn btn-white btn-outline">Más información</a></p>
 					</div>
 				</div>
 				<div class="feature feature-2 animate-box" data-animate-effect="fadeInUp">
 					<div class="feature-inner">
 						<span class="icon">
-							<i class="ti-announcement"></i>
+							<i class="ti-desktop"></i>
 						</span>
-						<h3>Announcdement</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. </p>
-						<p><a href="#" class="btn btn-white btn-outline">Learn More</a></p>
+						<h3>DESARROLLO WEB</h3>
+						<p>Diseño y desarrollo de aplicaciones y sitios web. Nos ocupamos de todo el proceso de desarrollo, desde el diseño y codificación hasta la puesta en marcha del producto.</p>
+						<p><a href="#gtco-footer" class="btn btn-white btn-outline">Más información</a></p>
 					</div>
 				</div>
 				<div class="feature feature-3 animate-box" data-animate-effect="fadeInUp">
 					<div class="feature-inner">
 						<span class="icon">
-							<i class="ti-timer"></i>
+							<i class="ti-stats-up"></i>
 						</span>
-						<h3>Timer</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. </p>
-						<p><a href="#" class="btn btn-white btn-outline">Learn More</a></p>
+						<h3>MARKETING DIGITAL</h3>
+						<p>Desarrollo de estrategias de promoción online, análisis de resultados en tiempo real. </p>
+						<p><a href="#gtco-footer" class="btn btn-white btn-outline">Más información</a></p>
 					</div>
 				</div>
 			</div>
@@ -153,26 +153,29 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>¿Cómo lo hacemos?</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>
+						Desarrollamos productos digitales y creamos experiencias de marca que representan.
+						Tu producto. Tu compañía. Tu audiencia.
+					</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="ti-vector"></i>
+							<i class="ti-light-bulb"></i>
 						</span>
-						<h3>Pixel Perfect</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. </p>
+						<h3>Estrategia</h3>
+						<p>Comenzamos por escuchar y dejar que eso dé forma a nuestro proceso de diseño, con nuestros clientes como socios en cada paso del camino. </p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="ti-tablet"></i>
+							<i class="ti-marker-alt"></i>
 						</span>
-						<h3>Fully Responsive</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. </p>
+						<h3>Diseño de experiencia</h3>
+						<p>El excelente diseño de productos crea una experiencia que profundiza las conexiones de los usuarios con su empresa y marca. Nuestro objetivo para el diseño es crear una experiencia que brinde utilidad y deleite. </p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -180,17 +183,17 @@
 						<span class="icon">
 							<i class="ti-settings"></i>
 						</span>
-						<h3>Web Development</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. </p>
+						<h3>Ingeniería y QA</h3>
+						<p>Cuando llega el momento de comenzar a escribir código, nuestro objetivo es hacer lo más simple posible en el menor tiempo posible para ofrecer el mayor valor comercial. </p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="ti-ruler-pencil"></i>
+							<i class="ti-rocket"></i>
 						</span>
-						<h3>Web Design</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. </p>
+						<h3>Crecimiento</h3>
+						<p>Una vez que la rueda esta girando, necesitamos analizar los resultados, solo así en continuo movimiento podemos potenciar el crecimiento.</p>
 					</div>
 				</div>
 			</div>
@@ -201,130 +204,54 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Our Latest Works</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Algunos de nuestros trabajos</h2>
 				</div>
 			</div>
-
 			<div class="row row-pb-md">
 				<div class="col-md-12">
 					<ul id="gtco-portfolio-list">
-						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_1.jpg); ">
-							<a href="#" class="color-1">
+						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/rpinto.png); ">
+							<a href="http://rpintomarketing.com/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>View the Earth from the Outer Space</h2>
+									<span>Diseño y desarrollo web</span>
+									<h2>RPinto Marketing</h2>
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_2.jpg); ">
-							<a href="#" class="color-2">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/kinecolor.png); ">
+							<a href="http://www.kinecolorlaplata.com/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Illustration</span>
-									<h2>Sleeping in the Cold Blue Water</h2>
+									<span>Diseño y desarrollo web</span>
+									<h2>Kinecolor La Plata</h2>
 								</div>
 							</a>
 						</li>
-
-
 						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
-							<a href="#" class="color-3">
+							<a href="https://play.google.com/store/apps/details?id=nyble.unlpwifiautologin" class="color-3">
 								<div class="case-studies-summary">
-									<span>Illustration</span>
-									<h2>Building Builded by Man</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_4.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>The Peaceful Place On Earth</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_5.jpg); ">
-							<a href="#" class="color-5">
-								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>I'm Getting Married</h2>
-								</div>
-							</a>
-						</li>
-						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_6.jpg); ">
-							<a href="#" class="color-6">
-								<div class="case-studies-summary">
-									<span>Illustration</span>
-									<h2>Beautiful Flowers In The Air</h2>
+									<span>Desarrollo de App</span>
+									<h2>511 alumnos UNLP</h2>
 								</div>
 							</a>
 						</li>
 					</ul>
 				</div>
 			</div>
-
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 text-center animate-box">
-					<a href="#" class="btn btn-white btn-outline btn-lg btn-block">See All Our Works</a>
+					<a href="https://andesglob.com/blog/" class="btn btn-white btn-outline btn-lg btn-block">Explore todos nuestros trabajos</a>
 				</div>
 			</div>
-
-
 		</div>
 	</div>
 
 	<div id="gtco-counter" class="gtco-section">
 		<div class="gtco-container">
-
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Fun Facts</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>¿Cómo podemos ayudar?</h2>
+					<p>Te ayudamos a crear conexiones significativas con tus clientes a través de experiencias de software personalizadas para teléfonos, tablets y web. Cantactanos y hablemos de tu negocio. </p>
 				</div>
-			</div>
-
-			<div class="row">
-
-				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-					<div class="feature-center">
-						<span class="icon">
-							<i class="ti-settings"></i>
-						</span>
-						<span class="counter js-counter" data-from="0" data-to="22070" data-speed="5000" data-refresh-interval="50">1</span>
-						<span class="counter-label">Creativity Fuel</span>
-
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-					<div class="feature-center">
-						<span class="icon">
-							<i class="ti-face-smile"></i>
-						</span>
-						<span class="counter js-counter" data-from="0" data-to="97" data-speed="5000" data-refresh-interval="50">1</span>
-						<span class="counter-label">Happy Clients</span>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-					<div class="feature-center">
-						<span class="icon">
-							<i class="ti-briefcase"></i>
-						</span>
-						<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
-						<span class="counter-label">Projects Done</span>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-					<div class="feature-center">
-						<span class="icon">
-							<i class="ti-time"></i>
-						</span>
-						<span class="counter js-counter" data-from="0" data-to="212023" data-speed="5000" data-refresh-interval="50">1</span>
-						<span class="counter-label">Hours Spent</span>
-
-					</div>
-				</div>
-
 			</div>
 		</div>
 	</div>
@@ -333,23 +260,23 @@
 		<div class="gtco-container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Products</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Tecnologías</h2>
+					<p>Algunas de las tecnologías con las cuales nos gusta trabajar.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
 				<div class="owl-carousel owl-carousel-carousel">
 					<div class="item">
-						<img src="images/img_1.jpg" alt="Free HTML5 Bootstrap Template by GetTemplates.co">
+						<img src="images/react.png" alt="React js">
 					</div>
 					<div class="item">
-						<img src="images/img_2.jpg" alt="Free HTML5 Bootstrap Template by GetTemplates.co">
+						<img src="images/scrum.png" alt="Scrum">
 					</div>
 					<div class="item">
-						<img src="images/img_3.jpg" alt="Free HTML5 Bootstrap Template by GetTemplates.co">
+						<img src="images/amazon.png" alt="Amazon">
 					</div>
 					<div class="item">
-						<img src="images/img_4.jpg" alt="Free HTML5 Bootstrap Template by GetTemplates.co">
+						<img src="images/docker.png" alt="Docker">
 					</div>
 				</div>
 			</div>
@@ -363,7 +290,7 @@
 				<div class="col-md-4">
 					<div class="gtco-widget">
 						<h3>Sobre nosotros</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos molestias quod sint ipsum possimus temporibus officia iste perspiciatis consectetur in fugiat repudiandae cum. Totam cupiditate nostrum ut neque ab?</p>
+						<p>Tenemos como objetivo principal ser tu aliado y potenciar el crecimiento de tu empresa a través de soluciones tecnológicas.</p>
 					</div>
 				</div>
 
@@ -373,7 +300,7 @@
 						<ul class="gtco-footer-links">
 							<li><a href="#">Sumate!</a></li>
 							<li><a href="#">Prensa</a></li>
-							<li><a href="#">Terrminos de privacidad</a></li>
+							<li><a href="#">Privacidad</a></li>
 						</ul>
 					</div>
 				</div>
@@ -395,7 +322,7 @@
 				<div class="col-md-12">
 					<p class="pull-left">
 						<small class="block">&copy; 2018 Andes Global. All Rights Reserved.</small>
-						<small class="block">Designed by <a href="http://andesglob.com/" target="_blank">Andes Global</a></small>
+						<small class="block">Designed by <a href="http://andesglob.com/" target="_blank">Andes Global.</a></small>
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
