feat: add tab icon and new images

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,6 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Andes Global &mdash; HOME</title>
+	<link rel="icon" href="images/andes.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Andes Global company website and blog." />
 	<meta name="keywords" content="andes global, andes company, andes leads, andes software, andes website, andes marketing, andes solutions, andes it, andes" />
@@ -58,7 +59,7 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><a href="#gtco-header">Andes Global <em>.</em></a></div>
+					<div id="gtco-logo"><a href="#gtco-header">Andes Global</a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
@@ -120,7 +121,7 @@
 							<i class="ti-mobile"></i>
 						</span>
 						<h3>DESARROLLO DE APPS MÓVILES</h3>
-						<p>Aplicaciones creativas y a medida, para disfrutar de todos los recursos disponibles en un smartphones. </p>
+						<p>Aplicaciones creativas y a medida, para disfrutar de todos los recursos disponibles en un smartphone. </p>
 						<p><a href="#gtco-footer" class="btn btn-white btn-outline">Más información</a></p>
 					</div>
 				</div>
@@ -245,12 +246,12 @@
 		</div>
 	</div>
 
-	<div id="gtco-counter" class="gtco-section">
+	<div id="gtco-counter" class="gtco-section" style="background-image: url(images/how.png)" data-stellar-background-ratio="0.5">
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>¿Cómo podemos ayudar?</h2>
-					<p>Te ayudamos a crear conexiones significativas con tus clientes a través de experiencias de software personalizadas para teléfonos, tablets y web. Cantactanos y hablemos de tu negocio. </p>
+					<p>Te ayudamos a crear conexiones significativas con tus clientes a través de experiencias de software personalizadas para teléfonos, tablets y web. Contactanos y hablemos de tu negocio. </p>
 				</div>
 			</div>
 		</div>
