--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <!--
-	Andes Global by andesglobal.com
-	URL: http://andesglobal.com
+	Andes Global by andesglob.com
+	URL: http://andesglob.com
 -->
 <html>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Andes Global &mdash; HOME</title>
+	<title>Andes Global &mdash; Desarrollo web, mobile, marketing</title>
 	<link rel="icon" href="images/andes.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Andes Global company website and blog." />
-	<meta name="keywords" content="andes global, andes company, andes leads, andes software, andes website, andes marketing, andes solutions, andes it, andes" />
+	<meta name="keywords" content="andes global, andes company, andes leads, andes software, andes website, andes marketing, andes solutions, andes it, andes, desarrollo web, desarrollo, mobile, app" />
 	<meta name="author" content="andesglobal.com" />
 
   	<!-- Facebook and Twitter integration -->
@@ -48,6 +48,16 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129143703-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-129143703-1');
+    </script>
 
 	</head>
 	<body>
@@ -191,7 +201,7 @@
 				<div class="col-md-3 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="ti-rocket"></i>
+							<i class="ti-stats-up"></i>
 						</span>
 						<h3>Crecimiento</h3>
 						<p>Una vez que la rueda esta girando, necesitamos analizar los resultados, solo así en continuo movimiento podemos potenciar el crecimiento.</p>
@@ -211,7 +221,39 @@
 			<div class="row row-pb-md">
 				<div class="col-md-12">
 					<ul id="gtco-portfolio-list">
-						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/rpinto.png); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cooper.png); ">
+							<a href="https://www.minhacooper.com.br/" target="_blank" rel="noopener noreferrer">
+								<div class="case-studies-summary">
+									<span>Diseño y desarrollo de Ecommerce y PWA</span>
+									<h2>Cooper</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/Sensorweb.png); ">
+							<a href="https://sensorweb.com.br/" target="_blank" rel="noopener noreferrer">
+								<div class="case-studies-summary">
+									<span>Diseño y desarrollo de PWA</span>
+									<h2>Sensorweb</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/redevistorias.png); ">
+							<a href="https://www.redevistorias.com.br/" target="_blank" rel="noopener noreferrer">
+								<div class="case-studies-summary">
+									<span>Diseño y desarrollo de PWA</span>
+									<h2>Rede Vistorias</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/nogueira.png); ">
+							<a href="http://www.nogueira.com.br/" target="_blank" rel="noopener noreferrer">
+								<div class="case-studies-summary">
+									<span>Diseño y desarrollo de Ecommerce</span>
+									<h2>Nogueira Máquinas Agrícolas</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/rpinto.png); ">
 							<a href="http://rpintomarketing.com/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
 									<span>Diseño y desarrollo web</span>
@@ -227,11 +269,19 @@
 								</div>
 							</a>
 						</li>
-						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
 							<a href="https://play.google.com/store/apps/details?id=nyble.unlpwifiautologin" class="color-3">
 								<div class="case-studies-summary">
 									<span>Desarrollo de App</span>
 									<h2>511 alumnos UNLP</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/jf.png); ">
+							<a href="http://www.jfmaquinas.com/es/" target="_blank" rel="noopener noreferrer">
+								<div class="case-studies-summary">
+									<span>Diseño y desarrollo de Ecommerce</span>
+									<h2>JF Máquinas</h2>
 								</div>
 							</a>
 						</li>
@@ -252,33 +302,6 @@
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>¿Cómo podemos ayudar?</h2>
 					<p>Te ayudamos a crear conexiones significativas con tus clientes a través de experiencias de software personalizadas para teléfonos, tablets y web. Contactanos y hablemos de tu negocio. </p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="gtco-products">
-		<div class="gtco-container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Tecnologías</h2>
-					<p>Algunas de las tecnologías con las cuales nos gusta trabajar.</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="owl-carousel owl-carousel-carousel">
-					<div class="item">
-						<img src="images/react.png" alt="React js">
-					</div>
-					<div class="item">
-						<img src="images/scrum.png" alt="Scrum">
-					</div>
-					<div class="item">
-						<img src="images/amazon.png" alt="Amazon">
-					</div>
-					<div class="item">
-						<img src="images/docker.png" alt="Docker">
-					</div>
 				</div>
 			</div>
 		</div>
@@ -322,7 +345,7 @@
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2018 Andes Global. All Rights Reserved.</small>
+						<small class="block">&copy; 2020 Andes Global. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://andesglob.com/" target="_blank">Andes Global.</a></small>
 					</p>
 					<p class="pull-right">
@@ -330,7 +353,7 @@
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
