--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1718,6 +1718,8 @@ form label {
   z-index: 100;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 5px;
+  border-radius: 10px;
+  text-align: center;
 }
 @media screen and (max-width: 768px) {
   #gtco-portfolio-list li a .case-studies-summary {
