feat: change clients name position

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -224,64 +224,72 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cooper.png); ">
 							<a href="https://www.minhacooper.com.br/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Diseño y desarrollo de Ecommerce y PWA</span>
 									<h2>Cooper</h2>
+									<span>Diseño y desarrollo de Ecommerce y PWA</span>									
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/Sensorweb.png); ">
 							<a href="https://sensorweb.com.br/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Diseño y desarrollo de PWA</span>
 									<h2>Sensorweb</h2>
+									<span>Diseño y desarrollo de PWA</span>									
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/redevistorias.png); ">
 							<a href="https://www.redevistorias.com.br/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Diseño y desarrollo de PWA</span>
 									<h2>Rede Vistorias</h2>
+									<span>Diseño y desarrollo de PWA</span>
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/nogueira.png); ">
 							<a href="http://www.nogueira.com.br/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Diseño y desarrollo de Ecommerce</span>
 									<h2>Nogueira Máquinas Agrícolas</h2>
+									<span>Diseño y desarrollo de Ecommerce</span>									
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/margirius.png); ">
+							<a href="https://www.margirius.com.br/" target="_blank" rel="noopener noreferrer">
+								<div class="case-studies-summary">
+									<h2>Margirius</h2>
+									<span>Integración de cálculos fiscales</span>									
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/rpinto.png); ">
 							<a href="http://rpintomarketing.com/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Diseño y desarrollo web</span>
 									<h2>RPinto Marketing</h2>
+									<span>Diseño y desarrollo web</span>									
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/kinecolor.png); ">
 							<a href="http://www.kinecolorlaplata.com/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Diseño y desarrollo web</span>
 									<h2>Kinecolor La Plata</h2>
+									<span>Diseño y desarrollo web</span>									
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
 							<a href="https://play.google.com/store/apps/details?id=nyble.unlpwifiautologin" class="color-3">
 								<div class="case-studies-summary">
-									<span>Desarrollo de App</span>
 									<h2>511 alumnos UNLP</h2>
+									<span>Desarrollo de App</span>									
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/jf.png); ">
 							<a href="http://www.jfmaquinas.com/es/" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
-									<span>Diseño y desarrollo de Ecommerce</span>
 									<h2>JF Máquinas</h2>
+									<span>Diseño y desarrollo de Ecommerce</span>									
 								</div>
 							</a>
 						</li>
