--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -359,9 +359,9 @@
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.facebook.com/andesglobal/"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.instagram.com/andesglobal/"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
