--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -277,8 +277,8 @@
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
-							<a href="https://play.google.com/store/apps/details?id=nyble.unlpwifiautologin" class="color-3">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/alumnos.jpg); ">
+							<a href="https://play.google.com/store/apps/details?id=nyble.unlpwifiautologin" target="_blank" rel="noopener noreferrer">
 								<div class="case-studies-summary">
 									<h2>511 alumnos UNLP</h2>
 									<span>Desarrollo de App</span>									
