feat: change header icon

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -69,7 +69,16 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><a href="#gtco-header">Andes Global</a></div>
+					<div id="gtco-logo">
+						<a href="#gtco-header">
+							<img 
+								src="/images/andes-1.svg" 
+								alt="triangle with all three sides equal"
+								height="50"
+								width="180"
+							/>
+						</a>
+					</div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
