--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -7,11 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Andes Global &mdash; Desarrollo web, mobile, marketing</title>
+	<title>Andes Global &mdash; Desarrollo web, aplicaciones móviles, PWA, marketing digital</title>
 	<link rel="icon" href="images/andes.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Andes Global company website and blog." />
-	<meta name="keywords" content="andes global, andes company, andes leads, andes software, andes website, andes marketing, andes solutions, andes it, andes, desarrollo web, desarrollo, mobile, app" />
+	<meta name="keywords" content="andes global, andes software, andes marketing, andes it, andes, desarrollo web, desarrollo, mobile, aplicaciones, PWA, Progressive Web Apps" />
 	<meta name="author" content="andesglobal.com" />
 
   	<!-- Facebook and Twitter integration -->
